# aroma_recovery

./: .gitmodules  CMakeLists.txt
buildtools/cmakegen/: build_common.mk  build_executable.mk  build_shared_library.mk  build_static_library.mk  clear_vars.mk  gen_cmake_from_androidmk.sh  run.mk
libs/minzip/: Zip.c
src/: main.c
